# otel-python-sdk

./: .gitignore  AGENTS.md  LICENSE.md  NOTICE.md  README.md  pyproject.toml  setup.py
.github/workflows/: pr_build.yaml  publish-dispatcher.yaml  publish.yaml  staticanalysis.yaml
docs/: sdk-quickstart.md
docs/instrumentation/: google-genai.md
docs/superpowers/plans/: 2026-07-17-httpx-non-consuming-response-hooks.md
docs/superpowers/specs/: 2026-07-17-httpx-non-consuming-response-hooks-design.md
scripts/: build.sh  bundle_vendor.py  fetch-vendor.sh  run-unit-tests.sh
src/agent_trace/: __init__.py  agent.py  agent_init.py  constants.py  custom_logger.py  env.py  otlp_reporting.py  sampling_span_processor.py
src/agent_trace/autoinstrumentation/: sitecustomize.py  wrapper.py
src/agent_trace/config/: config.py  config_pb2.py  default.py  environment.py
src/agent_trace/gen_ai/: __init__.py  exceptions.py
src/agent_trace/instrumentation/: __init__.py  genai_env.py  instrumentation_definitions.py
src/agent_trace/instrumentation/aiohttp/: __init__.py
src/agent_trace/instrumentation/anthropic/: __init__.py
src/agent_trace/instrumentation/aws_lambda/: __init__.py
src/agent_trace/instrumentation/botocore/: __init__.py
src/agent_trace/instrumentation/django/: __init__.py  django_auto_instrumentation_compat.py
src/agent_trace/instrumentation/fast_api/: __init__.py  fast_api_auto_instrumentation_compat.py
src/agent_trace/instrumentation/flask/: __init__.py
src/agent_trace/instrumentation/grpc/: __init__.py
src/agent_trace/instrumentation/httpx/: __init__.py  utils.py
src/agent_trace/instrumentation/litellm/: __init__.py
src/agent_trace/instrumentation/mcp/: __init__.py  gen_ai_mirror.py
src/agent_trace/instrumentation/mysql/: __init__.py
src/agent_trace/instrumentation/openai/: __init__.py
src/agent_trace/instrumentation/postgresql/: __init__.py
src/agent_trace/instrumentation/requests/: __init__.py
src/agent_trace/plugins/: __init__.py  control.py  loader.py  observability.py
src/agent_trace/plugins/builtin/: pipeline.py  span_attributes.py
src/harness_sdk/: __init__.py  agent.py  agent_init.py  constants.py  custom_logger.py  db_control_span_processor.py  env.py  excluded_by_attribute_span_processor.py  otlp_reporting.py  sampling_span_processor.py  span_attributes_processor.py
src/harness_sdk/autoinstrumentation/: sitecustomize.py  wrapper.py
src/harness_sdk/config/: config.py  default.py  environment.py
src/harness_sdk/gen_ai/: __init__.py  exceptions.py
src/harness_sdk/instrumentation/: __init__.py  genai_env.py  instrumentation_definitions.py
src/harness_sdk/instrumentation/aiohttp/: __init__.py
src/harness_sdk/instrumentation/anthropic/: __init__.py
src/harness_sdk/instrumentation/botocore/: __init__.py
src/harness_sdk/instrumentation/django/: __init__.py  django_auto_instrumentation_compat.py
src/harness_sdk/instrumentation/fast_api/: __init__.py  fast_api_auto_instrumentation_compat.py
src/harness_sdk/plugins/: __init__.py  control.py  loader.py
test/: __init__.py  conftest.py  control_test_helpers.py  db_control_span_processor_test.py  excluded_by_attribute_span_processor_test.py  otlp_reporting_test.py  sampling_span_processor_test.py  span_attributes_processor_test.py  test_plugin_loader.py
test-code/: bedrock_direct_spans.py
test/autoinstrumentation/: test_sitecustomize.py
test/config/: environment_test.py  file_test.py  minimal_config.yaml  test_config.py  test_config_file.yaml
test/externalServices/: docker-compose.yaml
test/filter/: test_registry.py
test/init/: __init__test.py  exporter_config_test.py
test/instrumentation/: base_wrapper_test.py  test_instrumentation_definitions.py  test_opt_in_gating.py
test/instrumentation/aiohttp/: aiohttp_test.py
test/instrumentation/anthropic/: test_anthropic.py
test/instrumentation/botocore/: test_bedrock_genai.py  test_botocore.py
test/instrumentation/django/: conftest.py  manage.py  test_django_1.py
test/instrumentation/fastapi/: test_fastapi.py
test/instrumentation/flask/: app.py  test_flask_1.py  test_flask_10.py  test_flask_11.py  test_flask_2.py  test_flask_3.py  test_flask_4.py  test_flask_5.py  test_flask_6.py  test_flask_7.py  test_flask_8.py  test_flask_9.py
test/instrumentation/google_genai/: google_genai_instrumentation_test.py  google_genai_mapping_test.py
test/instrumentation/grpc/: helloworld_pb2_grpc.py  test_grpc_1.py  test_grpc_2.py
test/instrumentation/httpx_client/: httpx_integration_test.py  test_httpx_hooks.py  test_httpx_utils.py
test/instrumentation/lambda/: lambda_test.py
test/instrumentation/litellm/: litellm_instrumentation_test.py
test/instrumentation/mcp/: test_gen_ai_mirror.py  test_mcp_wrapper.py
test/instrumentation/mysql/: mysql_integration_test.py
test/instrumentation/openai/: openai_instrumentation_test.py
test/instrumentation/postgresql/: postgresql_integration_test.py
test/instrumentation/requests/: requests_integration_test.py
(+18 files in other folders)
