[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-sdk"
version = "0.1.0"
description = "Harness Python SDK with instrumentation and plugin architecture"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-api==1.41.1",
    "opentelemetry-exporter-otlp==1.41.1",
    "opentelemetry-instrumentation==0.62b1",
    "opentelemetry-instrumentation-aiohttp-client==0.62b1",
    "opentelemetry-instrumentation-botocore==0.62b1",
    "opentelemetry-instrumentation-wsgi==0.62b1",
    "opentelemetry-instrumentation-fastapi==0.62b1",
    "opentelemetry-instrumentation-flask==0.62b1",
    "opentelemetry-instrumentation-mysql==0.62b1",
    "opentelemetry-instrumentation-psycopg2==0.62b1",
    "opentelemetry-instrumentation-requests==0.62b1",
    "opentelemetry-instrumentation-httpx==0.62b1",
    "opentelemetry-instrumentation-grpc==0.62b1",
    "opentelemetry-instrumentation-django==0.62b1",
    "opentelemetry-instrumentation-mcp==0.60.0",
    "opentelemetry-semantic-conventions-ai>=0.5.1,<0.6.0",
    "opentelemetry-propagator-b3==1.41.1",
    "opentelemetry-proto==1.41.1",
    "opentelemetry-sdk==1.41.1",
    "opentelemetry-util-http==0.62b1",
    "google>=3.0.0",
    "pyyaml",
    "protobuf",
    "psutil",
    "distro",
    "setuptools",
    "jaraco.text",
    "platformdirs",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34.0"]
openai = ["openai>=1.40.0"]
litellm = ["litellm>=1.60.0"]
google-genai = ["google-genai>=1.0.0"]
dev = [
    "pytest==7.4.3",
    "pytest-cov==3.0.0",
    "pytest-asyncio",
    "pytest-django==4.12.0",
    "flask==3.1.3",
    "Werkzeug==3.1.8",
    "aiohttp",
    "fastapi>=0.75.0",
    "psycopg2-binary",
    "mysql-connector-python==8.0.26",
    "boto3==1.35.43",
    "moto==3.0.3",
    "docker",
    "httpx",
    "Django==5.2.13",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "litellm>=1.60.0",
    "google-genai>=1.0.0",
    "grpcio",
]

[project.scripts]
harness-instrument = "harness_sdk.autoinstrumentation.wrapper:run"

[project.entry-points.harness_sdk_observability_plugin]
builtin_pipeline = "harness_sdk.plugins.builtin.pipeline:factory"
builtin_span_attributes = "harness_sdk.plugins.builtin.span_attributes:factory"

[tool.setuptools]
license-files = ["LICENSE.md", "NOTICE.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
DJANGO_SETTINGS_MODULE = "test.instrumentation.django.testapp.settings"
asyncio_mode = "auto"

[tool.pylint.main]
py-version = "3.12"
jobs = 0
ignore-paths = [
  "^test/",
  "^temporary-vendor/",
  "^build/",
  "^src/opentelemetry/",
  "^src/harness_sdk/instrumentation/flask/",
]

[tool.pylint.messages_control]
disable = [
  "trailing-whitespace",
  "no-member",
  "attribute-defined-outside-init",
  "unused-argument",
  "unused-import",
  "import-error",
  "protected-access",
]
